--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Osobní blog
 email: turektom@centrum.cz
 description: >- # this means to ignore newlines until "baseurl:"
-  Toto je můj osobní blog, kde si občas někdy něco napíšu.
+  Toto je můj osobní blog, kde si občas někdy něco napíšu. Také se zde nachází další možná užitečné stránky a informace.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username:
