changed the structure and some details

--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Osobní blog
-email: turektom@centrum.cz
+title: Personal blog
+email: personal@tomturek.anonaddy.me
 description: >- # this means to ignore newlines until "baseurl:"
-  Toto je můj osobní blog, kde si občas někdy něco napíšu. Také se zde nachází další možná užitečné stránky a informace.
+  This is my personal page and blog in one.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username:
