--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,9 @@ github_username:  metury
 theme: just-the-docs #minima
 plugins:
   - jekyll-feed
+  
+aux_links:
+  Template Repository: https://github.com/just-the-docs/just-the-docs-template
 
 # Exclude from processing.
 # The following items will not be processed, by default.
