--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,8 @@ theme: just-the-docs
 
 url: https://metury.github.io/
 
-kramdown:
-  syntax_highlighter: rouge
-  input: GFM
-  auto_ids: true
-  toc_levels: 1..3
-  math_engine: katex
+mermaid:
+  version: "9.1.6"
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
