--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Install Pandoc
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pandoc
+      - name: Generate pdfs from markdowns.
+        run: |
+          sh mff/md_to_pdf.sh
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
