--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Install Pandoc
+      - name: Install Pandoc and test
         run: |
           sudo apt-get update
-          sudo apt-get install -y pandoc
+          sudo apt-get install -y pandoc test
       - name: Generate pdfs from markdowns.
         run: |
           sh mff/md_to_pdf.sh
