--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,13 +12,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Install Pandoc
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y pandoc texlive-latex-base
-      - name: Generate pdfs from markdowns.
-        run: |
-          sh mff/md_to_pdf.sh
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
@@ -27,3 +20,11 @@ jobs:
           cache-version: 0 # Increment this number if you need to re-download cached gems
       - name: Build with Jekyll
         run: bundle exec jekyll build
+        
+#    - name: Install Pandoc
+#      run: |
+#        sudo apt-get update
+#        sudo apt-get install -y pandoc texlive-latex-base
+#    - name: Generate pdfs from markdowns.
+#      run: |
+#        sh mff/md_to_pdf.sh
