--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 title: Personal page
 description: My own personal page.
 theme: just-the-docs
+color_scheme: dark
 
 url: https://metury.github.io/
 
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+%aux_links:
+%  Template Repository: https://github.com/just-the-docs/just-the-docs-template
