--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ color_scheme: dark
 
 url: https://metury.github.io/
 
-%aux_links:
-%  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+aux_links:
+  Template Repository: https://github.com/just-the-docs/just-the-docs-template
