--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,9 @@ plugins:
 # If you want to link only specific pages in your header, use this and add the path to the pages
 # in order as they should show up.
 header_pages:
+  - adventofcode.md
   - mff.md
+  - projects.md
   - tenerife.md
   - misc.md
   - about.md
