--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ minima:
   #  - { platform: linkedin,       user_url: "https://www.linkedin.com/in/jekyll" }
   #  - { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
   #  - { platform: pinterest,      user_url: "https://www.pinterest.com/jekyll" }
-     - { platform: stackoverflow,  user_url: "https://stackoverflow.com/users/20530573/tury" }
+  #  - { platform: stackoverflow,  user_url: "https://stackoverflow.com/users/20530573/tury" }
   #  - { platform: telegram,       user_url: "https://t.me/jekyll" }
   #  - { platform: twitter,        user_url: "https://twitter.com/jekyllrb" }
   #  - { platform: x,              user_url: "https://x.com/jekyllrb" }
