--- a/book.toml
+++ b/book.toml
@@ -7,6 +7,7 @@ title = "Personal page"
 
 [output.html]
 mathjax-support = true
+additional-css = ["./theme/catppuccin.css"]
 
 [output.html.fold]
 enable = true
